--- a/app/src/main/res/layout/fragment_photo_list.xml
+++ b/app/src/main/res/layout/fragment_photo_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="@dimen/list_padding"
@@ -21,16 +20,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/list_title_margin_top"
+        android:text="@string/list_default_title"
+        android:textColor="@color/on_background"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_search"
-        tools:text="Trending now on Flickr" />
+        app:layout_constraintTop_toBottomOf="@id/image_search" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_photos"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/list_recycler_margin_top"
-        app:layoutManager="android.support.v7.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
