--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/image_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="center"
@@ -20,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/item_text_margin_start"
         android:layout_marginBottom="@dimen/item_text_margin_start"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/on_background"
         app:layout_constraintBottom_toTopOf="@+id/text_author_date"
         app:layout_constraintStart_toStartOf="parent"
