--- a/app/src/main/res/layout/fragment_photo_list.xml
+++ b/app/src/main/res/layout/fragment_photo_list.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="@dimen/list_padding"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/background"
+    android:paddingHorizontal="@dimen/list_padding"
     android:paddingTop="@dimen/list_padding">
 
     <ImageView
@@ -12,9 +13,9 @@
         android:layout_width="@dimen/list_image_size"
         android:layout_height="@dimen/list_image_size"
         android:contentDescription="@string/search_icon_description"
+        android:src="@drawable/search"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_search" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_title"
@@ -23,6 +24,7 @@
         android:layout_marginTop="@dimen/list_title_margin_top"
         android:text="@string/list_default_title"
         android:textColor="@color/on_background"
+        android:textSize="@dimen/list_title_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_search" />
 
@@ -31,9 +33,20 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/list_recycler_margin_top"
+        tools:listitem="@layout/item_photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_title" />
+
+    <ProgressBar
+        android:id="@+id/progress_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
