--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="@dimen/item_height"
+    android:layout_margin="@dimen/item_margin">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="center"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,6 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/item_text_margin_start"
         android:layout_marginBottom="@dimen/item_text_margin_start"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/on_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
