--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,10 @@
     <dimen name="list_image_size">36dp</dimen>
     <dimen name="list_title_margin_top">12dp</dimen>
     <dimen name="list_recycler_margin_top">12dp</dimen>
+    <dimen name="list_title_text">24sp</dimen>
     <dimen name="item_text_margin_start">4dp</dimen>
     <dimen name="item_text_margin_bottom">4dp</dimen>
+    <dimen name="item_height">200dp</dimen>
+    <dimen name="item_margin">8dp</dimen>
+
 </resources>
