--- a/app/src/main/res/layout/fragment_photo_list.xml
+++ b/app/src/main/res/layout/fragment_photo_list.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/background"
-    android:paddingHorizontal="@dimen/list_padding"
     android:paddingTop="@dimen/list_padding">
 
     <ImageView
         android:id="@+id/image_search"
         android:layout_width="@dimen/list_image_size"
         android:layout_height="@dimen/list_image_size"
+        android:layout_marginHorizontal="@dimen/list_margin_horizontal"
         android:contentDescription="@string/search_icon_description"
         android:src="@drawable/search"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,6 +21,7 @@
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/list_margin_horizontal"
         android:layout_marginTop="@dimen/list_title_margin_top"
         android:text="@string/list_default_title"
         android:textColor="@color/on_background"
@@ -32,12 +33,13 @@
         android:id="@+id/recycler_photos"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/list_recycler_margin_horizontal"
         android:layout_marginTop="@dimen/list_recycler_margin_top"
-        tools:listitem="@layout/item_photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_title" />
+        app:layout_constraintTop_toBottomOf="@+id/text_title"
+        tools:listitem="@layout/item_photo" />
 
     <ProgressBar
         android:id="@+id/progress_loading"
