--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="list_recycler_margin_horizontal">6dp</dimen>
     <dimen name="list_title_margin_top">12dp</dimen>
     <dimen name="list_recycler_margin_top">12dp</dimen>
+    <dimen name="list_edit_margin_horizontal">8dp</dimen>
     <dimen name="list_title_text">20sp</dimen>
     <dimen name="item_text_margin_horizontal">6dp</dimen>
     <dimen name="item_text_margin_bottom">4dp</dimen>
